--- a/transmisiones.html
+++ b/transmisiones.html
@@ -418,28 +418,11 @@
             border: 1px solid var(--color-border);
         }
 
-        .hero-image-placeholder {
+        .hero-image {
             width: 100%;
             height: 100%;
-            background: 
-                linear-gradient(135deg, var(--color-bg-card) 0%, var(--color-bg-elevated) 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            gap: 16px;
-            position: relative;
-        }
-
-        .hero-logo-display {
-            max-width: 80%;
-            height: auto;
-            opacity: 0.8;
-        }
-
-        .hero-image-placeholder span {
-            font-size: 13px;
-            color: var(--color-text-muted);
+            object-fit: cover;
+            object-position: center;
         }
 
         .hero-float-card {
@@ -1556,9 +1539,7 @@
                 </div>
                 <div class="hero-visual">
                     <div class="hero-image-container">
-                        <div class="hero-image-placeholder">
-                            <img src="/mnt/user-data/uploads/WhatsApp_Image_2026-01-22_at_10_56_01.jpeg" alt="Transmisiones Automáticas Logo" class="hero-logo-display">
-                        </div>
+                        <img src="https://drive.google.com/uc?export=view&id=1DF9uUSbsutWIvGC-49DrBEoXklIqTOCi" alt="Reparación de transmisiones automáticas de alta gama" class="hero-image">
                     </div>
                     <div class="hero-float-card">
                         <div class="hero-float-icon">
